; ModuleID = '/home/carl/AnghaBench/zstd/tests/fuzz/extr_fuzz_data_producer.c_FUZZ_dataProducer_reserveDataPrefix.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/fuzz/extr_fuzz_data_producer.c_FUZZ_dataProducer_reserveDataPrefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @FUZZ_dataProducer_reserveDataPrefix(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @FUZZ_dataProducer_uint32Range(%struct.TYPE_5__* %4, i32 0, i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = load i64, i64* %3, align 8
  %11 = call i64 @FUZZ_dataProducer_contract(%struct.TYPE_5__* %9, i64 %10)
  ret i64 %11
}

declare dso_local i64 @FUZZ_dataProducer_uint32Range(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i64 @FUZZ_dataProducer_contract(%struct.TYPE_5__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
